feat: before refactor

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -10,8 +10,8 @@
   <h1>CSS Bayan</h1>
   <ul class="accordion">
     <li class="item">
-      <input class="item__input" type="radio" name="first" id="first" checked>
       <label for="first" class="item__label"><span class="item__heading">You can't just copy and paste CSS</span> <span class="item__icon">&#x203A;</span></label>
+      <input class="item__input" type="radio" name="first" id="first">
       <div class="item__content">
         <img src="assets/Logo_250x250.png" alt="item img" class="content__image">
       </div>
