--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -4,49 +4,74 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="assets/icons/Web/icons8-folk-music-ios-16-filled-32.png" type="image/x-icon">
-  <title>cssBayan</title>
+  <title>CSS Bayan</title>
 </head>
 <body>
   <h1>CSS Bayan</h1>
   <ul class="accordion">
     <li class="item">
-      <label for="first" class="item__label"><span class="item__heading">You can't just copy and paste CSS</span> <span class="item__icon">&#x203A;</span></label>
-      <input class="item__input" type="radio" name="first" id="first">
-      <div class="item__content">
-        <img src="assets/Logo_250x250.png" alt="item img" class="content__image">
-      </div>
+      <label for="first" class="item__label">
+        <input class="item__input" name="bayan" type="radio" id="first" checked>
+        <span class="item__info">
+          <span class="item__heading">You can't just copy and paste css</span>
+          <img src="assets/icons/triangle-bottom-icon.svg" class="item__icon" alt="img"/>
+        </span>
+        <span class="item__content">
+          <img src="assets/Logo_250x250.png" alt="img">
+        </span>
+      </label>
     </li>
 
     <li class="item">
-      <input class="item__input" type="radio" name="first" id="second">
-      <label for="second" class="item__label"><span class="item__heading">Keep calm and carry on</span> <span class="item__icon">&#x203A;</span></label>
-      <div class="item__content">
-        <img src="assets/Logo_250x250.png" alt="item img" class="content__image">
-      </div>
+      <label for="second" class="item__label">
+        <input class="item__input" name="bayan" type="radio" id="second">
+        <span class="item__info">
+          <span class="item__heading">You can't just copy and paste css</span>
+          <img src="assets/icons/triangle-bottom-icon.svg" class="item__icon" alt="img"/>
+        </span>
+        <span class="item__content">
+          <img src="assets/Logo_250x250.png" alt="img">
+        </span>
+      </label>
     </li>
 
     <li class="item">
-      <input class="item__input" type="radio" name="first" id="third">
-      <label for="third" class="item__label"><span class="item__heading">Work life balance</span> <span class="item__icon">&#x203A;</span></label>
-      <div class="item__content">
-        <img src="assets/Logo_250x250.png" alt="item img" class="content__image">
-      </div>
+      <label for="third" class="item__label">
+        <input class="item__input" name="bayan" type="radio" id="third">
+        <span class="item__info">
+          <span class="item__heading">You can't just copy and paste css</span>
+          <img src="assets/icons/triangle-bottom-icon.svg" class="item__icon" alt="img"/>
+        </span>
+        <span class="item__content">
+          <img src="assets/Logo_250x250.png" alt="img">
+        </span>
+      </label>
     </li>
 
     <li class="item">
-      <input class="item__input" type="radio" name="first" id="fourth">
-      <label for="fourth" class="item__label"><span class="item__heading">Dude, were is js</span> <span class="item__icon">&#x203A;</span></label>
-      <div class="item__content">
-        <img src="assets/Logo_250x250.png" alt="item img" class="content__image">
-      </div>
+      <label for="fourth" class="item__label">
+        <input class="item__input" name="bayan" type="radio" id="fourth">
+        <span class="item__info">
+          <span class="item__heading">You can't just copy and paste css</span>
+          <img src="assets/icons/triangle-bottom-icon.svg" class="item__icon" alt="img"/>
+        </span>
+        <span class="item__content">
+          <img src="assets/Logo_250x250.png" alt="img">
+        </span>
+      </label>
     </li>
 
     <li class="item">
-      <input class="item__input" type="radio" name="first" id="fives">
-      <label for="fives" class="item__label"><span class="item__heading">Relax and take it easy</span> <span class="item__icon">&#x203A;</span></label>
-      <div class="item__content">
-        <img src="assets/Logo_250x250.png" alt="item img" class="content__image">
-      </div>
+      <label for="fives" class="item__label">
+        <input class="item__input" name="bayan" type="radio" id="fives">
+        <span class="item__info">
+          <span class="item__heading">You can't just copy and paste css</span>
+          <img src="assets/icons/triangle-bottom-icon.svg" class="item__icon" alt="img"/>
+        </span>
+        <span class="item__content">
+          <img src="assets/Logo_250x250.png" alt="img">
+        </span>
+      </label>
     </li>
   </ul>
 </body>
